--- a/phoneapp/build.gradle
+++ b/phoneapp/build.gradle
@@ -32,7 +32,14 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.activity:activity:1.8.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.google.android.material:material:<latest_version>'
+    implementation 'androidx.viewpager2:viewpager2:<latest_version>'
+    implementation 'androidx.recyclerview:recyclerview:<latest_version>'
 }
