--- a/phoneapp/src/main/AndroidManifest.xml
+++ b/phoneapp/src/main/AndroidManifest.xml
@@ -10,9 +10,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Phoneapp" >
-
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.bpm.Pulse"
+            android:exported="false" />
+        <activity
+            android:name=".activities.bpm.Stress"
+            android:exported="false" />
+        <activity android:name=".activities.challenges.ChallengeActivity"
+            android:exported="false" />
+        <activity android:name=".activities.profile.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,8 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".challenges.ChallengeActivity" />
-        <activity android:name=".profile.ProfileActivity" />
     </application>
 
 </manifest>
