send data to phone

--- a/watchapp/build.gradle
+++ b/watchapp/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.watchapp"
+        applicationId "com.example.zencheck"
         minSdk 26
         targetSdk 34
         versionCode 1
@@ -28,7 +28,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.support:wearable:2.9.0'
-    compileOnly 'com.google.android.wearable:wearable:2.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.activity:activity:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-wearable:18.1.0'
 }
