--- a/phoneapp/src/main/AndroidManifest.xml
+++ b/phoneapp/src/main/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:allowBackup="true"
@@ -10,16 +15,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Phoneapp" >
+
         <activity
-            android:name=".activities.bpm.Pulse"
+            android:name=".activities.measuring.PulseActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.bpm.Stress"
+            android:name=".activities.measuring.StressActivity"
             android:exported="false" />
         <activity android:name=".activities.challenges.ChallengeActivity"
             android:exported="false" />
         <activity android:name=".activities.profile.ProfileActivity"
             android:exported="false" />
+
         <activity
             android:name=".activities.MainActivity"
             android:exported="true" >
@@ -29,6 +36,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".services.DataLayerListenerService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/sensor-data/bpm" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
