--- a/watchapp/src/main/AndroidManifest.xml
+++ b/watchapp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -14,15 +14,21 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Phoneapp"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/Theme.Phoneapp">
+        <service
+            android:name=".services.BpmMeasurementPeriodicallyService"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity
             android:name=".activities.measuring.StressActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:taskAffinity="" />
         <activity
             android:name=".activities.measuring.PulseActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:taskAffinity="" />
 
         <meta-data
             android:name="com.google.android.wearable.standalone"
@@ -32,7 +38,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat"
-            tools:ignore="WearRecents" >
+            tools:ignore="WearRecents">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
