stress and bpm logic and graphs

--- a/watchapp/src/main/AndroidManifest.xml
+++ b/watchapp/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <application
         android:allowBackup="true"
@@ -16,10 +18,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Phoneapp">
+
         <service
             android:name=".services.BpmMeasurementPeriodicallyService"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true"
+            android:foregroundServiceType="dataSync"
+            android:permission="TODO" />
+
+        <service
+            android:name=".services.StressMeasurementPeriodicallyService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="dataSync"
+            android:permission="TODO" />
 
         <activity
             android:name=".activities.measuring.StressActivity"
