--- a/phoneapp/src/main/AndroidManifest.xml
+++ b/phoneapp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,30 +8,33 @@
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Phoneapp" >
-
+        android:theme="@style/Theme.Phoneapp">
+        <activity
+            android:name=".activities.challenges.ProgressActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.measuring.PulseActivity"
             android:exported="false" />
         <activity
             android:name=".activities.measuring.StressActivity"
             android:exported="false" />
-        <activity android:name=".activities.challenges.ChallengeActivity"
+        <activity
+            android:name=".activities.challenges.ChallengeActivity"
             android:exported="false" />
-        <activity android:name=".activities.profile.ProfileActivity"
+        <activity
+            android:name=".activities.profile.ProfileActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,11 +42,16 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.devicecommunication.DataLayerListenerService"
+        <service
+            android:name=".services.devicecommunication.DataLayerListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/sensor-data/bpm" />
+
+                <data
+                    android:host="*"
+                    android:pathPrefix="/sensor-data/bpm"
+                    android:scheme="wear" />
             </intent-filter>
         </service>
     </application>
