--- a/phoneapp/src/main/AndroidManifest.xml
+++ b/phoneapp/src/main/AndroidManifest.xml
@@ -19,22 +19,38 @@
         android:theme="@style/Theme.Phoneapp">
         <activity
             android:name=".activities.challenges.ProgressActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activities.measuring.PulseActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activities.measuring.StressActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activities.challenges.ChallengeActivity"
             android:exported="false" />
         <activity
             android:name=".activities.profile.ProfileActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" />
+        <activity
+            android:name=".activities.challenges.ChallengeTimerActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
